chore: refacto saveLoadMixin, and add android_12 splash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,5 @@ flutter_native_splash:
   # To restore Flutter's default white splash screen, run the following command in the terminal:
   # dart run flutter_native_splash:remove
   color: "#9C27B0"
+  android_12:
+    color: "#9C27B0"
